# osmquadtree-rust

./: .gitignore  Cargo.toml
gui/: Cargo.toml  build.rs
gui/resources/: message_panel.ui
gui/src/: main.rs  message_panel.rs  messages.rs
src/: brotli_compression.rs  callback.rs  common.rs  convertblocks.rs  count.rs  defaultlogger.rs  dense.rs  header_block.rs  info.rs  lib.rs  logging.rs  minimal_block.rs  node.rs  primitive_block.rs  quadtree.rs  read_file_block.rs  read_pbf.rs  read_xml.rs  relation.rs  stringutils.rs  tags.rs  utils.rs  way.rs  write_pbf.rs  writefile.rs
src/calcqts/: calcinmem.rs  calculate.rs  expand_wayboxes.rs  mod.rs  node_waynodes.rs  packwaynodes.rs  quadtree_store.rs  write_quadtrees.rs
src/elements/: combine_block.rs  common.rs  compareelements.rs  dense.rs  idset.rs  info.rs  minimal_block.rs  mod.rs  node.rs  primitive_block.rs  quadtree.rs  relation.rs  tags.rs  traits.rs  way.rs
src/geometry/: addparenttag.rs  default_minzoom_values.rs  default_style.rs  geometry_block.rs  minzoom.rs  mod.rs  multipolygons.rs  pack_geometry.rs  pointgeometry.rs  position.rs  process_geometry.rs  relationtags.rs  sorting.rs  style.rs  tempfile.rs  waywithnodes.rs  wkb.rs
src/geometry/elements/: complicatedpolygongeometry.rs  linestringgeometry.rs  mod.rs  pointgeometry.rs  simplepolygongeometry.rs
src/geometry/postgresql/: altconnection.rs  geosgeometry.rs  mod.rs  postgresconnection.rs  postgresqloptions.rs  prepcopy.rs  tablespec.rs  writepostgresql.rs
src/mergechanges/: filter_elements.rs  inmem.rs  mod.rs  sortbyid.rs  writetemp.rs
src/pbfformat/: convertblocks.rs  filelist.rs  header_block.rs  iterelementsflat.rs  mod.rs  read_file_block.rs  read_pbf.rs  write_pbf.rs  writefile.rs
src/sortblocks/: addquadtree.rs  inmem.rs  mod.rs  prepgraph.rs  quadtreetree.rs  sortblocks.rs  tempfile.rs  writepbf.rs
src/update/: filelist.rs  find_update.rs  indexblock.rs  mod.rs  read_xml.rs  run_update.rs
utils/: Cargo.toml  index-v1.json
utils/src/: clap.rs  clap_new.rs  error.rs  klask_messages.rs  lib.rs  main.rs  oqt-dump-clap.rs  setup.rs
utils/src/commands/: calcqts.rs  cli.rs  count.rs  mergechanges.rs  mod.rs  run_sortblocks.rs  sortblocks.rs  update.rs  update_initial.rs
