[package]
name = "osmquadtree"
version = "0.1.0"
authors = ["James Harris <jimbo.harris@gmail.com>"]
edition = "2021"

[workspace]

[dependencies]

flate2 = "1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

chrono = "*"
cpu-time="1.0.0"
quick-xml="*"
csv = "1.1"
indicatif = "0.15"

regex="1.4"


ureq="2.0"

simple-protocolbuffers = { git = "https://github.com/jharris2268/simple-protocolbuffers.git", branch = "main" }
channelled-callbacks = { git = "https://github.com/jharris2268/channelled-callbacks.git", branch = "main" }



brotli = "*"
lzma-rs = "0.3"
lz4_flex = "*"
rust-lzma = "0.6"

lazy_static="*"

[profile.release]
#debug = true

