[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_10"] }

clap="*"
osmquadtree = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main" }
osmquadtree-utils = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main" }


rand = "0.9.1"
async-channel = "2.3.1"

[build-dependencies]
glib-build-tools = "0.20.0"
