[package]
name = "osmquadtree-utils"
version = "0.1.0"
authors = ["James Harris <jimbo.harris@gmail.com>"]
edition = "2021"


[workspace]

[dependencies]
#clap="3"
clap="*"
num_cpus = "*"
dialoguer = "*"
sysinfo = "*"
console = "*"
rand="*"


#osmquadtree = { path = "../" }
osmquadtree = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main" }

#klask = "1.0.0"
#klask =  { git = "https://github.com/MichalGniadek/klask.git", branch="master"}
#egui = "0.18" #match klask

[[bin]]
name="oqt-dump-clap"
path="src/oqt-dump-clap.rs"


