[package]
name = "osmquadtree-utils"
version = "0.1.0"
authors = ["James Harris <jimbo.harris@gmail.com>"]
edition = "2021"


[workspace]

[dependencies]
#clap="3"
clap={version="*", features = ["derive"] }
num_cpus = "*"
dialoguer = "*"
sysinfo = "*"
console = "*"
rand="*"


#osmquadtree = { path = "../" }
osmquadtree = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main" }


[[bin]]
name="oqt-dump-clap"
path="src/oqt-dump-clap.rs"



